src/pages/Home/Home.css
header {
  height: 100vh;
  overflow: hidden;
}

.header-container {
  display: grid;
  grid-template-columns: 34% auto;
  align-items: center;
  padding: 40px;
  gap: 4rem;
  height: 100%;
  position: relative;
}

.header-container::before {
  content: '';
  background: var(--color-primary);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: -1;
  left: -80%;
}

.header-container img {
  aspect-ratio: 1/1;
  border-radius: 50%;
  border: 10px solid var(--color-white);
  position: relative;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.header-right {
  width: 90%;
  max-width: 700px;
}

.header-right h1 {
  margin-bottom: 1.4rem;
}

/* Media queries */
@media (max-width: 736px) {
  .header-container {
    grid-template-columns: 1fr;
    gap: 0;
  }

  .header-container::before {
    transform: rotate(-54deg);
    transition: var(--transition);
    left: 26%;
    top: -40%;
  }

  .header-container img {
    width: 70%;
    margin: 0 auto;
  }

  .header-right {
    text-align: center;
    margin: 0 auto;
    width: 100%;
    margin-top: 7rem;
  }
}

